--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,16 @@ version: '3.9'
 
 services:
   python:
+    container_name: backend-frontend
     build: .
     ports:
       - "5000:5000"
 
   db:
-    image: postgres
-    restart: always
-    shm_size: 128mb
+    container_name: sqlite-db
+    build: .
+    volumes:
+      - ./app:/db
     environment:
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_USER: root
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - "8080:8080"
+      - DATABASE_CLIENT = sqlite
+      - DATABASE_FILENAME = ./instance/web-site.db
